--- a/contact.html
+++ b/contact.html
@@ -21,20 +21,21 @@
     <main>
         <form action="#" method="post">
             <h2>Kontaktiere mich</h2>
-            <label for="name">Vorname:</label>
-            <input type="text" id="name" name="name" required>
+            <!-- Änderung zu Mockup: keine Placeholder, unnötig -->
+            <label for="vorname">Vorname:</label>
+            <input type="text" id="vorname" name="vorname" required>
 
-            <label for="name">Nachname:</label>
-            <input type="text" id="name" name="name" required>
+            <label for="nachname">Nachname:</label>
+            <input type="text" id="nachname" name="nachname" required>
 
             <label for="email">Email:</label>
             <input type="email" id="email" name="email" required>
 
-            <label for="name">Betreff:</label> <!-- Änderung zu Mockup: nützliche erweiterung / ging vergesssen -->
-            <input type="text" id="name" name="name" required>
+            <label for="betreff">Betreff:</label> <!-- Änderung zu Mockup: nützliche erweiterung / ging vergesssen -->
+            <input type="text" id="betreff" name="betreff" required>
 
             <label for="message">Ihre Nachricht:</label>
-            <textarea id="message" name="message" required></textarea>
+            <textarea id="message" name="message" rows="4" cols="50" required></textarea>
 
             <!-- Änderung zu Mockup: andere grösse sieht besser aus -->
             <button type="submit">Abschicken</button>
