--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
             <input type="text" id="betreff" name="betreff" required>
 
             <label for="message">Ihre Nachricht:</label>
-            <textarea id="message" name="message" rows="4" cols="50" required></textarea>
+            <textarea id="message" name="message" required></textarea>
 
             <!-- Änderung zu Mockup: andere grösse sieht besser aus -->
             <button type="submit">Abschicken</button>
