--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Über mich</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
@@ -20,20 +20,18 @@
     </header>
     <main>
         <section class="profile-section">
-            <img src="Matteo-Dekstop-Wallpaper.png" alt="Profilbild von Matteo Bucher" class="profile-pic">
+            <img src="img/Matteo-Dekstop-Wallpaper.png" alt="Profilbild von Matteo Bucher" class="profile-pic">
             <div class="profile-text">
                 <h2>Matteo Bucher</h2>
                 <h4>Informatiker Applikationsentwicklung</h4>
                 <div class="divider"></div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-                    aliquip ex ea commodo consequat.</p>
+                <p>Mein Name ist Matteo Bucher und ich mache zur Zeit eine Ausbildung zum Informatiker Applikationsentwicklung bei der GemDat AG in St.Gallen. Im Moment bin ich im ersten Lehrjahr und absolviere das Basislehrjahr im ZBW in St.Gallen Winken. Nebenbei spiele ich Unihockey und Bariton.</p>
             </div>
         </section>
     </main>
     <footer>
         <!-- Änderung zu Mockup: andere Farbe (auch im Farbkonzept) sieht besser aus -->
-        Copyright &copy; Matteo Bucher 2024
+        <p>Copyright &copy; Matteo Bucher 2024</p>
     </footer>
 </body>
 
