--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kontakt</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
@@ -19,22 +19,22 @@
         </nav>
     </header>
     <main>
-        <form action="#" method="post">
+        <form class="contact-form" action="#" method="post">
             <h2>Kontaktiere mich</h2>
             <!-- Änderung zu Mockup: keine Placeholder, unnötig -->
-            <label for="vorname">Vorname:</label>
+            <label for="vorname">Vorname</label>
             <input type="text" id="vorname" name="vorname" required>
 
-            <label for="nachname">Nachname:</label>
+            <label for="nachname">Nachname</label>
             <input type="text" id="nachname" name="nachname" required>
 
-            <label for="email">Email:</label>
+            <label for="email">Email</label>
             <input type="email" id="email" name="email" required>
 
-            <label for="betreff">Betreff:</label> <!-- Änderung zu Mockup: nützliche erweiterung / ging vergesssen -->
+            <label for="betreff">Betreff</label> <!-- Änderung zu Mockup: nützliche erweiterung / ging vergesssen -->
             <input type="text" id="betreff" name="betreff" required>
 
-            <label for="message">Ihre Nachricht:</label>
+            <label for="message">Ihre Nachricht</label>
             <textarea id="message" name="message" required></textarea>
 
             <!-- Änderung zu Mockup: andere grösse sieht besser aus -->
@@ -43,7 +43,7 @@
     </main>
     <footer>
         <!-- Änderung zu Mockup: andere Farbe (auch im Farbkonzept) sieht besser aus -->
-        Copyright &copy; Matteo Bucher 2024
+        <p>Copyright &copy; Matteo Bucher 2024</p>
     </footer>
 </body>
 
