--- a/skills.html
+++ b/skills.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fähigkeiten</title>
-    <link rel="stylesheet" href="stylesss.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
@@ -21,16 +21,16 @@
     <main>
         <section class="skills-section">
             <h2>Fähigkeiten</h2>
-            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore
-                et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea
-                rebum.</p>
+            <p>In meinem ersten Lehrjahr habe ich das Basisjahr im ZBW absolviert, wo wir Grundkenntnisse in folgenden Bereichen erlernt haben:</p>
             <ul>
-                <li>Lorem ipsum dolor sit amet</li>
-                <li>Lorem ipsum dolor sit amet</li>
-                <li>Lorem ipsum dolor sit amet</li>
-                <li>Lorem ipsum dolor sit amet</li>
-                <li>Lorem ipsum dolor sit amet</li>
-                <li>Lorem ipsum dolor sit amet</li>
+                <li>HTML / CSS</li>
+                <li>JavaScript</li>
+                <li>Micrsoft Word</li>
+                <li>Micrsoft Excel</li>
+                <li>Micrsoft PowerPoint</li>
+                <li>C</li>
+                <li>Wordpress</li>
+                <li>PHP</li>
             </ul>
         </section>
     </main>
