--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
                 <h2>Matteo Bucher</h2>
                 <h4>Informatiker Applikationsentwicklung</h4>
                 <div class="divider"></div>
-                <p>Mein Name ist Matteo Bucher und ich mache zur Zeit eine Ausbildung zum Informatiker Applikationsentwicklung bei der GemDat AG in St.Gallen. Im Moment bin ich im ersten Lehrjahr und absolviere das Basislehrjahr im ZBW in St.Gallen Winken. Nebenbei spiele ich Unihockey und Bariton.</p>
+                <p>Mein Name ist Matteo Bucher und ich mache zur Zeit eine Ausbildung zum Informatiker
+                    Applikationsentwicklung bei der GemDat AG in St.Gallen. Im Moment bin ich im ersten Lehrjahr und
+                    absolviere das Basislehrjahr im ZBW in St.Gallen Winken. Nebenbei spiele ich Unihockey und Bariton.
+                </p>
             </div>
         </section>
     </main>
