--- a/skills.html
+++ b/skills.html
@@ -21,7 +21,8 @@
     <main>
         <section class="skills-section">
             <h2>Fähigkeiten</h2>
-            <p>In meinem ersten Lehrjahr habe ich das Basisjahr im ZBW absolviert, wo wir Grundkenntnisse in folgenden Bereichen erlernt haben:</p>
+            <p>In meinem ersten Lehrjahr habe ich das Basisjahr im ZBW absolviert, wo wir Grundkenntnisse in folgenden
+                Bereichen erlernt haben:</p>
             <ul>
                 <li>HTML / CSS</li>
                 <li>JavaScript</li>
